guardando cambios interfaz

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
-<h1>
-  {{title}}
-</h1>
+<div class="">
+  <div class="container">
+    <h1>Ordenamiento</h1>
+    <br>
+    <p>Ingresa los valores separados por coma</p>
+    <form class="form-inline">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Ejemplo: 13,24,123,2323">
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Ordenar 
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Metodo burbuja</a></li>
+          <li><a href="#">Metodo Inserción</a></li>
+          <li><a href="#">Metodo Selección</a></li>
+          <li><a href="#">Metodo Mezcla</a></li>
+          <li><a href="#">Metodo Casilleros</a></li>
+          <li><a href="#">Metodo Rápido</a></li>
+          <li><a href="#">Metodo Radix</a></li>
+        </ul>
+      </div>
+    </form>
+  </div>
+</div>
