--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="container">
-  <h1 class="col-xs-12">Ordenamiento</h1>
+  <h1 class="col-xs-12">Sorting</h1>
   <div>
     <form>
       <div class="col-xs-12">
         <br>
         <p>Ingresa los valores separados por coma</p>
       </div>
-      <div class="form-group col-xs-8">
+      <div class="form-group col-sm-8">
         <input type="text" class="form-control" placeholder="Ejemplo: 13,24,123,2323" [(ngModel)]="data" name="data">
       </div>
-      <div class="btn-group col-xs-3" role="group">
+      <div class="btn-group col-sm-3" role="group">
         <button type="button" id="btn-ordenar" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">
           Ordenar &nbsp; <span class="caret"></span>
@@ -29,6 +29,7 @@
   </div>
   <div class="col-xs-12">
     <br>
+    <button class="btn btn-danger pull-right">Limpiar Todo</button>
     <table class="table table-striped table-hover" *ngIf="list.length > 0">
       <thead>
         <tr>
