--- a/src/assets/css/material-cyan-theme.css
+++ b/src/assets/css/material-cyan-theme.css
@@ -44,3 +44,6 @@ textarea:focus, textarea.form-control:focus, input.form-control:focus, input[typ
     -webkit-box-shadow: inset 0 -2px 0 #00BCD4;
     box-shadow: inset 0 -2px 0 #00BCD4;
 }
+.btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
+  outline: 0px;
+}
