--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,19 @@
 body {
   padding-top: 110px;
 }
+.container-loader {
+  margin-top: 100px;
+}
+.loader {
+  margin: 0px auto;
+  border: 14px solid #f3f3f3; /* Light grey */
+  border-top: 14px solid #00BCD4; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1.3s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
