--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,8 @@
           <input type="text" class="form-control" placeholder="Ejemplo: 13,24,123,2323" [(ngModel)]="data" name="data">
         </div>
         <div class="btn-group col-sm-3" role="group">
-          <button type="button" id="btn-ordenar" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
+          <button type="button" id="btn-ordenar" class="btn btn-primary dropdown-toggle" [class.disabled]="!data" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             Ordenar &nbsp; <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
@@ -46,7 +46,6 @@
             <li><a href="#" (click)="mezcla()">Metodo Mezcla</a></li>
             <li><a href="#" (click)="casilleros()">Metodo Casilleros</a></li>
             <li><a href="#" (click)="rapido()">Metodo Rápido</a></li>
-            <li><a href="#" (click)="radix()">Metodo Radix</a></li>
           </ul>
         </div>
       </form>
@@ -101,13 +100,13 @@
           <input type="text" class="form-control" placeholder="Ejemplo: 74" [(ngModel)]="wanted" name="wanted">
         </div>
         <div class="btn-group col-sm-3 col-xs-7" role="group">
-          <button type="button" id="btn-ordenar" class="btn btn-default dropdown-toggle" [class.disabled]="! list.length > 0" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
+          <button type="button" id="btn-ordenar" class="btn btn-default dropdown-toggle" [class.disabled]="!data || !wanted" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             Buscar &nbsp; <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="#" (click)="burbuja()">Busqueda Secuencial</a></li>
-            <li><a href="#" (click)="insercion()">Busqueda Binaria</a></li>
+            <li><a href="#" (click)="linearSearch()">Busqueda Secuencial</a></li>
+            <li><a href="#" (click)="binarySearch()">Busqueda Binaria</a></li>
           </ul>
         </div>
       </div>
@@ -120,21 +119,6 @@
         </div>
         <div class="form-group col-sm-8">
           <input type="text" class="form-control" placeholder="Lista vacía" [(ngModel)]="data" name="data" disabled>
-        </div>
-        <div class="btn-group col-sm-3" role="group">
-          <button type="button" id="btn-ordenar" class="btn btn-primary disabled dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Ordenar &nbsp; <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#" (click)="burbuja()">Metodo Burbuja</a></li>
-            <li><a href="#" (click)="insercion()">Metodo Inserción</a></li>
-            <li><a href="#" (click)="seleccion()">Metodo Selección</a></li>
-            <li><a href="#" (click)="mezcla()">Metodo Mezcla</a></li>
-            <li><a href="#" (click)="casilleros()">Metodo Casilleros</a></li>
-            <li><a href="#" (click)="rapido()">Metodo Rápido</a></li>
-            <li><a href="#" (click)="radix()">Metodo Radix</a></li>
-          </ul>
         </div>
       </form>
       <br><br>
@@ -151,6 +135,10 @@
         </span>
       </p>
     </div>
+    <div class="col-xs-12">
+      <h4 *ngIf="errorMessage">{{ errorMessage }}</h4>
+      <h4 *ngIf="foundIn != undefined && foundIn != -1">Valor encontrado en la posición: <strong>{{ foundIn + 1 }}</strong></h4>
+      <h4 *ngIf="foundIn == -1">Valor no encontrado</h4>
+    </div>
   </div>
 </section>
-
